# rules_mdbook

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  version.bzl
.github/: .gitignore  release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel
mdbook/: BUILD.bazel  defs.bzl  repositories.bzl  repositories_transitive.bzl  toolchain.bzl
mdbook/private/: BUILD.bazel  mdbook.bzl  mdbook_versions.bzl  process_wrapper.rs  repository_utils.bzl  toolchain.bzl
tests/generated_srcs/: BUILD.bazel  generated_srcs_test.rs
tests/simple/: BUILD.bazel
