load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//mdbook/private:toolchain.bzl", "current_mdbook_binary", "current_mdbook_toolchain")

exports_files(["defs.bzl"])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

current_mdbook_toolchain(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

current_mdbook_binary(
    name = "mdbook",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//mdbook/private:bzl_lib"],
)
