load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "process_wrapper",
    srcs = ["process_wrapper.rs"],
    edition = "2021",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//mdbook:__pkg__"],
)
